--- a/test.html
+++ b/test.html
@@ -79,10 +79,10 @@
         <option value="balteauCeram300">Balteau Ceram 300 Directional: 40° x 50°</option>
     </select>
 
-    <label for="plateType">Kies plaat type:</label>
+    <label for="plateType">Opstelling:</label>
     <select id="plateType">
         <option value="vlak">Vlakke plaat</option>
-        <option value="gebogen">Gebogen plaat (EN-8 / ASME-B)</option>
+        <option value="gebogen">Vat,opstelling EN-8 / ASME-B</option>
     </select>
 
     <label for="calcType">Wat wil je weten:</label>
@@ -97,7 +97,7 @@
     </div>
 
     <div id="diameterField" class="hidden">
-        <label for="diameter">Diameter in cm (alleen bij gebogen plaat):</label>
+        <label for="diameter">Diameter van het vat in cm:</label>
         <input type="number" id="diameter" step="any">
     </div>
 
