--- a/test.html
+++ b/test.html
@@ -70,7 +70,7 @@
 </script>
 
 <div class="container">
-    <h1 style="color: #F5DF4D; text-align: center;">Bundelgrootte & FFD</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Bundelgrootte</h1>
 
     <label for="tubeSelect">Kies een bron:</label>
     <select id="tubeSelect">
