--- a/test.html
+++ b/test.html
@@ -119,8 +119,8 @@
         yxlon300: { narrow: 40, wide: 55 },
         smartEvo300: { narrow: 30, wide: 60 },
         balteauCeram300: { narrow: 40, wide: 50 },
-        Se75breed: { narrow: 90, wide 90 },
-        Se75smal: { narrow: 60, wide 60 }
+        Se75breed: { narrow: 90, wide: 90 },
+        Se75smal: { narrow: 60, wide: 60 }
     };
 
     document.getElementById('calcType').addEventListener('change', updateFields);
